# serializer version: 1
# name: test_pure_module_snapshot[pure-module-PureModule-pure_module_pkg-False]
  '''
  """Pure Python implementation for the generated package.
  
  This module contains the Python implementation exported by the package
  entrypoint in `__init__.py`.
  
  Generated pure-Python projects use this module as the primary implementation
  behind the package's public API.
  
  """
  
  from __future__ import annotations
  
  
  def hello() -> str:
      """Return a friendly greeting from Python."""
      return "hello from Python"
  
  '''
# ---
# name: test_pure_module_snapshot[rust-module-RustModule-rust_module_pkg-True]
  '''
  """Pure Python implementation for the generated package.
  
  This module contains the Python implementation exported by the package
  entrypoint in `__init__.py`.
  
  When the optional Rust extension is built successfully, `__init__.py` prefers
  the Rust-backed implementation and uses this module as the Python fallback for
  environments where the extension is unavailable.
  
  """
  
  from __future__ import annotations
  
  
  def hello() -> str:
      """Return a friendly greeting from Python."""
      return "hello from Python"
  
  '''
# ---
# name: test_python_only_help_output_snapshot
  '''
  Available targets:
    build                Build virtual-env and install deps
    build-release        Build artefacts (sdist & wheel)
    clean                Remove build artifacts
    fmt                  Format sources
    check-fmt            Verify formatting
    lint                 Run linters
    lint-python          Run Python linters
    typecheck            Run typechecking
    audit                Audit dependencies for known vulnerabilities
    markdownlint         Lint Markdown files and enforce en-GB-oxendict spelling
    nixie                Validate Mermaid diagrams
    test                 Run tests
    help                 Show available targets
  
  '''
# ---
